# feather

./: README.md  buildin.json  extended_stenotype.py  feather-mandatory-briefs.json  feather-starter.json  flamingo.py  wing-9-fingerspelling.json  wing-9.1.1.json  wing-affixes.json  wing-briefs.json  wing-commands.json  wing-punctuation.json
plover-wing-theory/: README.md  setup.cfg  setup.py  wing_layout.py
