[metadata]
name = plover-wing-theory
description = "A one-handed steno theory"
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
py_modules =
    wing_layout
    double_wing_layout
    double_wing_extension

[options.entry_points]
plover.system =
    Wing = wing_layout